IF   (DYNAMIC_GWEARTH)
    ADD_DEFINITIONS(-DGWEARTH_LIBRARY)
ELSE (DYNAMIC_GWEARTH)
    ADD_DEFINITIONS(-DGWEARTH_LIBRARY_STATIC)
ENDIF(DYNAMIC_GWEARTH)

IF(WIN32)
    IF(MSVC)
        SET(CMAKE_SHARED_LINKER_FLAGS_DEBUG "${CMAKE_SHARED_LINKER_FLAGS_DEBUG} /NODEFAULTLIB:MSVCRT")
    ENDIF(MSVC)
ENDIF(WIN32)

SET(LIB_NAME "gwDBConnection")

SET(HEADER_PATH ${PROJECT_SOURCE_DIR}/include/${LIB_NAME})

SET(LIB_PUBLIC_HEADERS
		MongoDB.h
	)
	
SET(TARGET_SRC
		MongoDB.cpp
	)

ADD_LIBRARY(
    ${LIB_NAME} ${GWEARTH_USER_DEFINED_DYNAMIC_OR_STATIC}
    ${LIB_PUBLIC_HEADERS}
    ${TARGET_SRC} )
	
INCLUDE_DIRECTORIES(${GWEARTH_SOURCE_DIR}/Src  ${OSG_INCLUDE_DIR} ${Boost_INCLUDE_DIR} ${LIBMONGOCXX_INCLUDE_DIRS})

LINK_WITH_VARIABLES(${LIB_NAME} OPENTHREADS_LIBRARY LIBMONGOCXX_LIBRARIES)
 
INCLUDE(ModuleInstall OPTIONAL)